初始化环境

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     // 目标代码(ts -> js(es5/6/7))
     "target": "esnext",
     // 目标代码需要使用的模块化方案(commonjs require/module.exports/es module import/export)
