--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.18.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
