--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "npx webpack-dev-server"
+  },
   "dependencies": {
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
@@ -11,7 +14,10 @@
     "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
     "@types/webpack-env": "^1.18.0",
+    "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
