--- a/package.json
+++ b/package.json
@@ -4,16 +4,31 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "commit": " git add . && git cz ",
+    "commit": "npm run changelog && git add . && git cz ",
     "push": "git add . && git cz && git push origin HEAD",
-    "dev": "npx webpack-dev-server"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "dev": "npx webpack-dev-server",
+    "prepare": "husky install"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-customizable"
     }
   },
+  "lint-staged": {
+    "src/**/*.{js,ts,wxs}": [
+      "prettier --config .prettierrc.js --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "src/**/*.{wxss,scss}": [
+      "prettier --config .prettierrc.js --write",
+      "stylelint --fix --allow-empty-input",
+      "git add"
+    ]
+  },
   "dependencies": {
+    "@typescript-eslint/parser": "^5.40.0",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "vue": "^3.2.37",
@@ -23,12 +38,25 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@commitlint/config-conventional": "^17.1.0",
     "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
     "babel-loader": "^8.2.5",
+    "commitizen": "^4.2.5",
+    "commitlint": "^17.1.2",
+    "commitlint-config-cz": "^0.13.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^7.0.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "cz-conventional-changelog": "^2.1.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "ts-loader": "^9.3.1",
