--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@types/node": "^18.8.4",
     "@typescript-eslint/parser": "^5.40.0",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
@@ -61,6 +62,7 @@
     "pug-plain-loader": "^1.1.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "vue-eslint-parser": "^9.1.0",
     "vue-loader": "^17.0.0",
     "webpack-dev-server": "^4.10.0"
   }
