--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "commit": "npm run changelog && git add . && git cz ",
     "push": "git add . && git cz && git push origin HEAD",
+    "dev": "npx webpack-dev-server --mode=development --progress",
+    "qa": "npx webpack-dev-server --progress --mode=development",
+    "prod": "npx webpack-dev-server --mode=production --progress",
+    "build:dev": "npx webpack --mode=production --progress",
+    "build:qa": "npx webpack --mode=production --progress ",
+    "build:prod": "npx webpack --mode=production --progress",
+    "lint": "npm run lint:js && npm run lint:style",
+    "lint:js": "eslint --ext .jsx ./src --fix",
+    "lint:style": "stylelint src/**/*.{scss,wxss} --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "dev": "npx webpack-dev-server",
     "prepare": "husky install"
   },
   "config": {
@@ -30,6 +38,7 @@
   "dependencies": {
     "@types/node": "^18.8.4",
     "@typescript-eslint/parser": "^5.40.0",
+    "ant-design-vue": "^3.2.13",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "vue": "^3.2.37",
@@ -40,9 +49,12 @@
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@commitlint/config-conventional": "^17.1.0",
+    "@statoscope/webpack-plugin": "^5.24.0",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
+    "babel-plugin-import": "^1.13.5",
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.2",
     "commitlint-config-cz": "^0.13.3",
@@ -52,16 +64,24 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "html-minimizer-webpack-plugin": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "unplugin-vue-components": "^0.22.8",
     "vue-eslint-parser": "^9.1.0",
     "vue-loader": "^17.0.0",
     "webpack-dev-server": "^4.10.0"
