--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "vue": "^3.2.37",
+    "vue-router": "^4.1.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
