--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^18.8.4",
     "@typescript-eslint/parser": "^5.40.0",
     "ant-design-vue": "^3.2.13",
+    "axios": "^1.1.3",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "vue": "^3.2.37",
@@ -70,6 +71,7 @@
     "html-minimizer-webpack-plugin": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "image-webpack-loader": "^8.1.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
@@ -78,11 +80,13 @@
     "prettier": "^2.7.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "raw-loader": "^4.0.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "unplugin-vue-components": "^0.22.8",
+    "url-loader": "^4.1.1",
     "vue-eslint-parser": "^9.1.0",
     "vue-loader": "^17.0.0",
     "webpack-dev-server": "^4.10.0"
