✨新增(package): 修改build命令

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev": "npx webpack-dev-server --mode=development --progress",
     "qa": "npx webpack-dev-server --progress --mode=development",
     "prod": "npx webpack-dev-server --mode=production --progress",
-    "build:dev": "npx webpack --mode=production --progress",
-    "build:qa": "npx webpack --mode=production --progress ",
-    "build:prod": "npx webpack --mode=production --progress",
+    "build:dev": "webpack --mode=production --progress",
+    "build:qa": "webpack --mode=production --progress ",
+    "build:prod": "webpack --mode=production --progress",
     "lint": "npm run lint:js && npm run lint:style",
     "lint:js": "eslint --ext .jsx ./src --fix",
     "lint:style": "stylelint src/**/*.{scss,wxss} --fix",
