--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev": "npx webpack-dev-server --mode=development --progress",
     "qa": "npx webpack-dev-server --progress --mode=development",
     "prod": "npx webpack-dev-server --mode=production --progress",
-    "build:dev": "webpack --mode=production --progress",
-    "build:qa": "webpack --mode=production --progress ",
-    "build:prod": "webpack --mode=production --progress",
+    "build:dev": "npx webpack --mode=production --progress",
+    "build:qa": "npx webpack --mode=production --progress ",
+    "build:prod": "npx webpack --mode=production --progress",
     "lint": "npm run lint:js && npm run lint:style",
     "lint:js": "eslint --ext .jsx ./src --fix",
     "lint:style": "stylelint src/**/*.{scss,wxss} --fix",
@@ -41,6 +41,8 @@
     "ant-design-vue": "^3.2.13",
     "axios": "^1.1.3",
     "css-loader": "^6.7.1",
+    "dayjs": "^1.11.5",
+    "lodash": "^4.17.21",
     "style-loader": "^3.3.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
@@ -57,9 +59,11 @@
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.5",
+    "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.2",
     "commitlint-config-cz": "^0.13.3",
+    "compression-webpack-plugin": "^10.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.25.0",
