--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "raw-loader": "^4.0.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "terser-webpack-plugin": "^5.3.6",
+    "thread-loader": "^3.0.4",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "unplugin-vue-components": "^0.22.8",
