✨新增(pages): stlye 新增默认样式处理 和 mixins

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "webpack-vue",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "commit": "npm run changelog && git add . && git cz ",
+    "version": "# 修改 version  \n zx bump.mjs",
+    "commit": "npm run version && npm run changelog && git add . && git cz ",
     "push": "git add . && git cz && git push origin HEAD",
+    "start": "npx webpack-dev-server --mode=development --progress",
     "dev": "npx webpack-dev-server --mode=development --progress",
     "qa": "npx webpack-dev-server --progress --mode=development",
     "prod": "npx webpack-dev-server --mode=production --progress",
@@ -63,6 +65,8 @@
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.2",
     "commitlint-config-cz": "^0.13.3",
+    "zx": "^7.1.1",
+    "prompts": "^2.4.2",
     "compression-webpack-plugin": "^10.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
