--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-vue",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -57,6 +57,7 @@
     "@babel/preset-env": "^7.19.1",
     "@commitlint/config-conventional": "^17.1.0",
     "@statoscope/webpack-plugin": "^5.24.0",
+    "@types/lodash": "^4.14.189",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "autoprefixer": "^10.4.12",
@@ -66,8 +67,6 @@
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.2",
     "commitlint-config-cz": "^0.13.3",
-    "zx": "^7.1.1",
-    "prompts": "^2.4.2",
     "compression-webpack-plugin": "^10.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
@@ -84,9 +83,11 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
+    "prompts": "^2.4.2",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "raw-loader": "^4.0.2",
@@ -99,6 +100,7 @@
     "url-loader": "^4.1.1",
     "vue-eslint-parser": "^9.1.0",
     "vue-loader": "^17.0.0",
-    "webpack-dev-server": "^4.10.0"
+    "webpack-dev-server": "^4.10.0",
+    "zx": "^7.1.1"
   }
 }
