--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,13 +26,22 @@
     // 文件路径在解析时, 基本url
     "baseUrl": ".",
     // 指定具体要解析使用的类型
-    "types": ["webpack-env"],
+    "types": [
+      "webpack-env"
+    ],
     // 路径解析(类似于webpack alias)
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ],
     },
     // 可以指定在项目中可以使用哪里库的类型(Proxy/Window/Document)
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
   },
   "include": [
     "./src/*.ts",
@@ -46,5 +55,8 @@
     "src/main.js",
     "src/types.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
