--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -35,13 +35,9 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
-        with:
-          # 选择要使用的 node 版本
-          node-version: '18.12.0'
-
       # 如果缓存没有命中，安装依赖
       - name: Install dependencies
-        run: npm install
+        run: yarn
 
       # 运行构建脚本
       - name: Build
