🔧工具(webpack): webpack yaml

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -35,9 +35,13 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
+        with:
+          # 选择要使用的 node 版本
+          node-version: '19.2.0'
+
       # 如果缓存没有命中，安装依赖
       - name: Install dependencies
-        run: yarn
+        run: npm install
 
       # 运行构建脚本
       - name: Build
